--- a/config.toml
+++ b/config.toml
@@ -54,11 +54,11 @@ theme = "hugo-creative-theme"
 
 	# Service section
 	[params.services]
-		headline = "Me!"
+		headline = "Summary"
 
         [[params.services.list]]
             icon = "fa-diamond"
-            title = "Software Engineer"
+            title = "Technology Developer"
             description = "@Byond.Travel"
 
         [[params.services.list]]
@@ -69,7 +69,7 @@ theme = "hugo-creative-theme"
 		[[params.services.list]]
             icon = "fa-newspaper-o"
             title = "Skills"
-            description = "Python, PHP and Go"
+            description = "Python, Go and PHP"
 
         [[params.services.list]]
             icon = "fa-heart"
@@ -86,15 +86,15 @@ theme = "hugo-creative-theme"
 
     # Aside section
 	[params.aside]
-		headline = "Please find my resume."
+		headline = "You can find my resume here!"
 
 		[params.aside.button]
-			text = "Resume"
+			text = "Resume Link."
 			link = "https://www.dropbox.com/s/k1o1o5ii5pu4vln/Resume.docx.pdf?dl=0"
 
 	# Contact section
 	[params.contact]
-		headline = "Let's Get In Touch!"
-		description = "Ready to start your next project? That's great! Give me a call or send me an email and i will get back to you as soon as possible!"
+		headline = "Thanks"
+		description = "Let's Get In Touch! You can give me a call or send me an email and i will get back to you as soon as possible!"
 		phone = "+91 9620489445"
 		email = "vikasmca2k11@gmail.com"
