--- a/config.toml
+++ b/config.toml
@@ -41,14 +41,14 @@ theme = "hugo-creative-theme"
 	[params.hero]
 		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
 		slogan     = "Software Engineer"
-		subtitle   = "Hey! Are you looking for a software engineer who love to cook code for you then you are on the right place."
+		subtitle   = "Looking for a challenging job. Have knowledge of Python/Django framework."
 		buttonText = "Find out more"
 
 
 	# About section
 	[params.about]
 		headline    = "About Me!"
-		description = "I am Vikas Kumar from Bihar.I did Master of Computer Application from Jawaharlal Nehru University, New Delhi and Bachelor of Computer Application from, IGNOU."
+		description = "I am Vikas Kumar from Chapra, Bihar.I did Master of Computer Application from Jawaharlal Nehru University(JNU), New Delhi and Bachelor of Computer Application from, IGNOU."
 		buttonText  = "Get started!"
 
 
