--- a/config.toml
+++ b/config.toml
@@ -1,100 +1,43 @@
-baseurl = "https://vikas-kumar.herokuapp.com/"
+baseurl = "http://codeifyoucansolve.heroku.com"
+title = "Code If You Can Solve!"
+theme = "ghostwriter"
 languageCode = "en-us"
-title = "Vikas Kumar"
-theme = "hugo-creative-theme"
+copyright = ""
+disqusShortname = "XXX"
+googleAnalytics = "XXX"
 
-[params]
+[Author]
+    name = "Vikas Kumar"
+    profile = "https://google.com/+vikaskumar"
 
-	# You can use Markdown syntax for urls [text](//url.to/source) for
-	# most longer texts.
+[Taxonomies]
+    tag = "tags"
 
-	# All icons using Fontawesome's icon font. Look at fortawesome.github.io/Font-Awesome/icons/
-	# for more icons. The icons are represented by their corresponding
-	# CSS class.
+[Params]
+    intro = true
+    headline = "Code If You Can Solve!"
+    description = "CIYCS - Code If You Can Solve!"
+    facebook = "https://www.facebook.com/codeifucansolve"
+    twitter = "https://twitter.com/codeifucansolve"
+[Permalinks]
+    post = "/:year/:month/:day/:filename/"
 
-	# All projects of the portfolio are defined in their own files.
-	# You can find example projects at 'exampleSite/data/projects'. Copy the 'projects'
-	# folder into the 'data' directory at the root of this Hugo site.
-	# For more informtion take a look at the README.
+[[menu.main]]
+    name = "Blog"
+    url = "/"
+    weight = 1
 
-	# To provide some metadata for search engines feel free to add a few
-    # information about you and your website.
-	name = "Vikas Kumar"
-	description = "Software Engineer who loves to cook code."
+[[menu.main]]
+    name = "Projects"
+    url = "/project/"
+    weight = 2
 
-	# The path must be relative to the static folder
-	favicon = "favicon.ico"
+[[menu.main]]
+    name = "Contact"
+    url = "/page/contact/"
+    weight = 3
 
-
-	# Navigation
-	[params.navigation]
-		brand = "Vikas Kumar"
-
-		[params.navigation.links]
-			about     = "About"
-			services  = "Summary"
-			portfolio = "Resume"
-			contact   = "Contact Me!"
-
-
-	# Hero section
-	[params.hero]
-		# To change the background of the hero section, replace the 'header.jpg' at './static/img' with your own.
-		slogan     = "Software Engineer"
-		subtitle   = "Looking for a challenging job. Have knowledge of Python/Django framework."
-		buttonText = "Find out more"
-
-
-	# About section
-	[params.about]
-		headline    = "About Me!"
-		description = "I am Vikas Kumar from Chapra, Bihar.I did Master of Computer Application from Jawaharlal Nehru University(JNU), New Delhi and Bachelor of Computer Application from, IGNOU."
-		buttonText  = "Get started!"
-
-
-	# Service section
-	[params.services]
-		headline = "Summary"
-
-        [[params.services.list]]
-            icon = "fa-diamond"
-            title = "Technology Developer"
-            description = "@Byond.Travel"
-
-        [[params.services.list]]
-			icon = "fa-paper-plane"
-			title = "Master of Computer Application"
-			description = "Jawaharlal Nehru University, New Delhi"
-
-		[[params.services.list]]
-            icon = "fa-newspaper-o"
-            title = "Skills"
-            description = "Python, Go and PHP"
-
-        [[params.services.list]]
-            icon = "fa-heart"
-            title = "Experience"
-            description = "1.5 Years"
-
-
-    # Portfolio modals
-	[params.portfolio.modal]
-        client = "Client"
-        date = "Date"
-        category = "Category"
-        buttonText = "Close"
-
-    # Aside section
-	[params.aside]
-		headline = "You can find my resume here!"
-
-		[params.aside.button]
-			text = "Resume Link."
-			link = "https://www.dropbox.com/s/k1o1o5ii5pu4vln/Resume.docx.pdf?dl=0"
-
-	# Contact section
-	[params.contact]
-		headline = "Thanks"
-		description = "Let's Get In Touch! You can give me a call or send me an email and i will get back to you as soon as possible!"
-		phone = "+91 9620489445"
-		email = "vikasmca2k11@gmail.com"
+[[menu.main]]
+    name = "About"
+    url = "/page/about/"
+    weight = 4
